--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,11 @@
 {
-  "presets": [
-    "next/babel"
-  ],
+  "presets": ["next/babel"],
   "plugins": [
     [
       "styled-components",
       {
         "ssr": true,
-        "displayName": true,
-        "preprocess": false
+        "displayName": true
       }
     ]
   ] 
