--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "js-md5": "^0.7.3",
     "next": "12.0.9",
     "polished": "^4.1.4",
     "react": "17.0.2",
@@ -16,6 +18,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/js-md5": "^0.4.3",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
     "@types/styled-components": "^5.1.21",
