--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.25.0",
     "js-md5": "^0.7.3",
     "next": "12.0.9",
+    "nookies": "^2.5.2",
     "polished": "^4.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
