--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.34.12",
     "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3"
   },
