--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.12",
+    "react-spinners": "^0.11.0",
     "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.7.2",
     "@types/js-md5": "^0.4.3",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
